장준녕 커밋0717

--- a/src/main/resources/static/corp/talentPool/talent_pool.css
+++ b/src/main/resources/static/corp/talentPool/talent_pool.css
@@ -202,6 +202,19 @@ a.tab:hover {
     font-weight: bold;
     color: #666;
 }
+.sort-btn {
+  cursor: pointer;
+  user-select: none;
+  transition: all 0.2s;
+}
+
+.sort-btn:hover {
+  color: #000000;
+}
+
+.sort-btn.active {
+  color: #000000;
+}
 
 .page-size-select {
     padding: 10px 10px;
