--- a/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
+++ b/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
@@ -18,18 +18,30 @@ document.addEventListener('DOMContentLoaded', () => {
  		window.location.href = '/corp/jobPostingForm'; // 페이지 이동
 	});
 	
-	
+	//헤더에 있는 것도 가져올수가 있네 
+	// userJson을 가져와서 userInfo에 넣으면 문자열이 되는데, JSON.parse(...)로 변환해야 객체로 사용가능 
+	// JSON.parse(...) -> 문자열로 되어 있는 JSON 데이터를 JavaScript 객체로 변환해주는 함수 / 반대로 자바객체를 JSON으로 -> JSON.stringify()
+	let userInfoJson = document.querySelector('#userDataDiv').dataset.user;
+	console.log(userInfoJson);
+	let userInfoJs = JSON.parse(userInfoJson);
+	console.log(userInfoJs);
 	
 	
 	
 });//ready
 
 
-
 //지원자 관리 모달창
 function openApplicantListModal(){
 	alert('지원자 관리 모달창 열림');
 }
+
+//처음화면 자료 뿌리기(진행중, 전체)
+function fetchStartData(){
+	
+	
+}
+
 
 //진행중 버튼 누르면 진행중인 공고만 가져와 뿌리기
 function getProcessingPosting(){
