--- a/src/main/resources/static/user/jobPosting/css/main_page.css
+++ b/src/main/resources/static/user/jobPosting/css/main_page.css
@@ -977,8 +977,8 @@
         }
 
         .mypage-btn {
-            background-color: white;
-            color: #28a745;
+            background-color: #28a745;
+            color: white;
             border: 1px solid #28a745;
         }
 
